crates/oxc_css_parser/tests/error/selectors/trailing-comma.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: simple selector is expected
  ┌─ trailing-comma.css:1:4
  │
1 │ a, {}
  │    ^


